--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "redux": "^3.7.2",
     "redux-devtools": "^3.4.1",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^3.0.2"
+    "styled-components": "^3.0.2",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
